@@ -1,3 +1,8 @@
+*winetricks-99999999 (07 Mar 2015)
+
+  07 Mar 2015; NP-Hardass <np.hardass@gmail.com> +winetricks-99999999.ebuild:
+  Add live ebuild with patch from Bob Wya.  Resolves Gentoo bug #540662
+
 *winetricks-20141130 (22 Jan 2015)
 
   22 Jan 2015; NP-Hardass <np.hardass@gmail.com> +metadata.xml,
